feat: agregar funcionalidad para eliminar direcciones de clientes autenticados
